<resources>
    <string name="app_name">Sagara Login</string>
    <string name="welcome_message">Selamat Datang di Sagara</string>
    <string name="button_login">Login</string>
    <string name="button_registrasi">Daftar</string>
    <string name="form_email">E-mail</string>
    <string name="form_password">Password</string>
    <string name="belum_memiliki_akun">Tidak punya akun? </string>
    <string name="sign_up">Daftar di sini!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="masuk">Masuk!</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="selanjutnya">Selanjutnya</string>
    <string name="halaman_1_dari_2">Halaman 1 dari 2</string>
    <string name="register_nama_lengkap">Nama Lengkap</string>
    <string name="register_alamat">Alamat</string>
    <string name="register_kode_pos">Kode Pos</string>
    <string name="register_tanggal_lahir">Tanggal Lahir</string>
    <string name="register_kota">Kota</string>
    <string name="register_provinsi">Provinsi</string>
    <string name="daftar">Daftar</string>
    <string name="pilih_kota">Pilih Kota</string>
    <string name="jakarta">Jakarta</string>
    <string name="bogor">Bogor</string>
    <string name="depok">Depok</string>
    <string name="tangerang">Tangerang</string>
    <string name="bekasi">Bekasi</string>
    <string name="pilih">Pilih</string>

    <string-array name="list_nama">
        <item>Firmansyah Yanuar</item>
        <item>M Achun Armando</item>
        <item>Arif R Gilang</item>
        <item>Marcell Antonius</item>
        <item>Cryssa Piter</item>
        <item>Agnes Hata</item>
        <item>Faradilla Azranur</item>
    </string-array>

    <string-array name="list_jabatan">
        <item>Koordinator AlProg</item>
        <item>Koordinator PemWeb</item>
        <item>Koordinator OOP</item>
        <item>Koordinator MetNum</item>
        <item>Member Asisten Praktikum</item>
        <item>Koordinator Alprog</item>
        <item>Koordinator SDB II</item>
    </string-array>

    <string-array name="list_rekening">
        <item>123321123321</item>
        <item>456654456654</item>
        <item>789987789987</item>
        <item>890098890098</item>
        <item>180081180081</item>
        <item>149941149941</item>
        <item>348843348843</item>
    </string-array>
</resources>
