<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo_welcome"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/logo_sagara" />

        <TextView
            android:id="@+id/welcome_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/welcome_message"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:textStyle="bold" />

        <com.libizo.CustomEditText
            android:id="@+id/username"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            android:hint="@string/form_email"
            android:backgroundTint="@color/colorPrimaryDark"
            app:libIZO_setBorderView="true"
            app:libIZO_setStrokeWidth="2dp"
            app:libIZO_setBorderColor="@color/colorAccent"
            app:libIZO_setCornerRadius="4dp"/>

        <com.libizo.CustomEditText
            android:id="@+id/password"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            android:hint="@string/form_password"
            android:backgroundTint="@color/colorPrimaryDark"
            app:libIZO_setBorderView="true"
            app:libIZO_setStrokeWidth="2dp"
            app:libIZO_setBorderColor="@color/colorAccent"
            app:libIZO_setCornerRadius="4dp"/>

        <Button
            android:id="@+id/choose_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/button_login"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"/>

    </LinearLayout>


</RelativeLayout>