<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_vertical"
    tools:context=".fragments.PageTwoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="Isi data diri anda"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="Halaman 2 dari 2"
            android:layout_marginBottom="16dp"/>

        <com.libizo.CustomEditText
            android:id="@+id/register_nama"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            android:hint="@string/register_nama_lengkap"
            android:backgroundTint="@color/colorPrimaryDark"
            app:libIZO_setBorderView="true"
            app:libIZO_setStrokeWidth="2dp"
            app:libIZO_setBorderColor="@color/colorAccent"
            app:libIZO_setCornerRadius="4dp"/>

        <com.libizo.CustomEditText
            android:id="@+id/register_alamat"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            android:hint="@string/register_alamat"
            android:backgroundTint="@color/colorPrimaryDark"
            app:libIZO_setBorderView="true"
            app:libIZO_setStrokeWidth="2dp"
            app:libIZO_setBorderColor="@color/colorAccent"
            app:libIZO_setCornerRadius="4dp"/>

        <com.libizo.CustomEditText
            android:id="@+id/register_tanggal_lahir"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            android:hint="@string/register_tanggal_lahir"
            android:editable="false"
            android:backgroundTint="@color/colorPrimaryDark"
            app:libIZO_setBorderView="true"
            app:libIZO_setStrokeWidth="2dp"
            app:libIZO_setBorderColor="@color/colorAccent"
            app:libIZO_setCornerRadius="4dp"/>

        <com.libizo.CustomEditText
            android:id="@+id/register_kodepos"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            android:hint="@string/register_kode_pos"
            android:backgroundTint="@color/colorPrimaryDark"
            app:libIZO_setBorderView="true"
            app:libIZO_setStrokeWidth="2dp"
            app:libIZO_setBorderColor="@color/colorAccent"
            app:libIZO_setCornerRadius="4dp"/>

        <Spinner
            android:id="@+id/spinner_provinsi"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            style="@style/Widget.AppCompat.DropDownItem.Spinner"/>

        <Spinner
            android:id="@+id/spinner_kota"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="8dp"
            style="@style/Widget.AppCompat.DropDownItem.Spinner"/>



        <Button
            android:id="@+id/finish_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/daftar"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"/>

    </LinearLayout>
</RelativeLayout>